static/css/grid.css
body {
    background: #9A9A9A;
    margin:0; 
    padding:0px; 
    color:white;
}

.blue {
    background: blue !important;
}

.yellow {
    background: yellow;
}

.container {
    height: 100%;
}

#index-main-col {
    position:relative;
    width: 1000px;
    height: 100%;
    top: 230px;
}

.content-main-col {
    position:relative;
    width: 1000px;
    height: 100%;
    margin: 0 auto;
}

#artist-result-block {
    background: #990033;
    padding: 10px;
    width: 497px;
}

#song-result-block {
    background: #990033;
    padding: 10px;
    width: 497px;
}

.box {
    border-style: solid;
    border-width: 1px;
    border-color: white;
    height: 260px;
}

.half-box {
    border-style: solid;
    border-width: 1px;
    border-color: white;
    height: 127px;
}

/*fix margins*/
.box-footer {
    position: absolute;
    bottom: -5px;
    right: 5px;
    font-size: 32px;
}

.index-w-separator {
    width: 4px;
    padding: 0;
}

.content-h-separator {
    height: 5px;
}

#half-box-h-separator {
    height: 4px;
}

.content-w-separator {
    width: 4px;
    padding: 0;
}

.title-img-container {
    position: absolute;
    top: 20px;
    left: 20px;
}

.title-box {
    width: 1000px;
    height: 100px;
    border-style: solid;
    border-width: 1px;
    border-color: white;
    background: #343535;
    margin: 0 auto;
}

.center {
    width: 1000px;
    margin: 0 auto;
}

.tag-container {
    position: relative;
    height: 100%;
}

.tag-block {
    font-size: 25px;
    font-style: italic;
    position: absolute;
    bottom: 5px;
    right: 10px;
}

#trending-block {
    width: 330px;
    padding: 10px;
    background: #990033;
    padding-bottom: 0;
}

/* make this 1 class */
#about-block {
    width: 331px;
    padding: 10px;
    background: #990033;
    padding-bottom: 0;
}
#compare-block {
    width: 331px;
    padding: 10px;
    background: #990033;
    padding-bottom: 0;
}
#featured-block {
    width: 331px;
    padding: 10px;
    background: #990033;
    padding-bottom: 0;
}

#trending-block:hover {
    background: #FF66A3;
}
#about-block:hover {
    background: #FF66A3;
}
#compare-block:hover {
    background: #FF66A3;
}
#featured-block:hover {
    background: #FF66A3;
}

.search-container {
    height: 100%;
}

.search-bar {
    position: absolute;
    width: 450px ;
    color:black;
    left: 10px;
    bottom: 10px;
}

#artist-summary-col {
    background: #990033;
    padding: 10px;
    height: 100%;
}

#artist-image {
    height: 200px;
    width: 200px;
    float:right;
    overflow: hidden;
}

#artist-song-block {
    background: #990033;
    padding: 10px;
    width: 497px;
}

#sim-artist-block {
    background: #990033;
    padding: 10px;
    width: 497px;
}

a:link {
    color:white;
}
a:visited {
    color:white;
}
a:hover {
    color:white;
}
a:active {
    color:white;
}

.subtitle-text {
    font-size: 23px;
}

.clear {
    clear:both;
}
.nav-button {
    width: 196px;
    height: 40px;
    position: relative;
    bottom: 0;
    right: 0;
}
.nav-button:hover {
    background: green;
}
/*credit to stackoverflow*/
.nav-link {
    position:absolute; 
    width:100%;
    height:100%;
    top:0;
    left: 0;

    /* edit: added z-index */
    z-index: 1;

    /* edit: fixes overlap error in IE7/8, 
     make sure you have an empty gif */
    background-image: url('empty.gif');
}

